--- a/build.gradle
+++ b/build.gradle
@@ -7,36 +7,13 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url "http://www.datanucleus.org/downloads/maven2/"
+    }
 }
 
 dependencies {
+    compile group: 'oracle', name: 'ojdbc6', version: '11.2.0.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
-group 'public_library'
-version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-group 'public_library'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
