--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     compile group: 'oracle', name: 'ojdbc6', version: '11.2.0.3'
+    compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '8.5.15'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
